src/styles/index.sass
:root
	--primary-color: #ff0000
	--secondary-color: #00ff00
	--default-background: #1e293b


*, body, html
	margin: 0
	padding: 0
	box-sizing: border-box

.start_time, .end_time, .type, .confidence, .locale, .speaker
	display: none

#diarized_text
	max-width: 50%
	margin: auto

.personal_cards
	max-height: 2rem
	display: flex
	flex-wrap: wrap

.personal_cards,
.personal_cards > p.text
	position: relative

p.text
	position: absolute
	margin-bottom: 1rem
	white-space: pre
	text-align: center
	color: #ffffffda

.S1 ~ p.text
	border-bottom-color: #ff0000

.S2 ~ p.text
	border-bottom-color: #00ff00

.S3 ~ p.text
	border-bottom-color: #0000ff

.S4 ~ p.text
	border-bottom-color: #ffff00

.S5 ~ p.text
	border-bottom-color: #ff00ff

.S6 ~ p.text
	border-bottom-color: #00ffff

.S7 ~ p.text
	border-bottom-color: #ffffff

.S8 ~ p.text
	border-bottom-color: #000000

.S9 ~ p.text	
	border-bottom-color: #f000ff

.S10 ~ p.text
	border-bottom-color: #0f0ff0 

.card-container
	display: flex
	flex-direction: column
	align-items: flex-start

.center
	margin: auto
	width: 50%
	padding: 10px

.space
	background-color: var(--default-background)
	white-space: pre
	height: 24px

// .card_wrapper
// 	position: absolute


.personal_cards.expanded
		// position: absolute
		z-index: 10
		max-width: 24rem
		max-height: 24rem
		height: 100%
		color: #ffffffda
		padding: 1.5rem
		background-color: #202022
		
		pointer-events: auto
		cursor: pointer
		
		transform: scale(1)
		opacity: 1
		transition: all 150ms ease-in-out 
		
		display: flex
		flex-direction: column

		&:after
			content: ""
			height: 1rem
			width: 1rem
			border-radius: 50%
			box-shadow: inset 2px -3px 3px #bb86fc
			top: 0.625rem
			background-color: transparent
			
			position: absolute
			right: 0

		p.text,
		p.details
			position: relative
			height: 24px
			background: #f0f0f0
			color: #191919
			display: block
			flex-grow: 1
			padding: 0.1rem
			margin: 0.1rem
			justify-content: center
			text-align: center		

		span.space
			display: none

		p.text
			&:before
				content: "Text: "
				position: relative
				top: 0
				left: 0
				width: 100%
				height: 100%
				z-index: 1

